tests/e2e/regex_after_name4.error
Error: syntax error in story at line 1, column 20

1|    my_service command /regexp/
                         ^

E0041: `/` is not allowed here
