tests/e2e/regex_after_name4.story
my_service command /regexp/
